--- a/style.css
+++ b/style.css
@@ -2,3 +2,18 @@
 	margin: 0;
 	padding: 0;
 }
+
+body { 
+	position: relative;
+	height: 100vh;
+	overflow: hidden;
+}
+
+.qr-container {
+	border: 1px solid red;
+	width: max-content;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
