--- a/style.css
+++ b/style.css
@@ -7,13 +7,30 @@ body {
 	position: relative;
 	height: 100vh;
 	overflow: hidden;
+	background-color: #d5e1ef;
 }
 
 .qr-container {
+	height: max-content;
+	width: 250px;
 	border: 1px solid red;
-	width: max-content;
+	background-color: white;
+	padding: 26px;
+	border-radius: 20px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+
+.qr-content {
+}
+
+.image-container {
+	width: 100%;
+}
+
+.image-container > img {
+	width: 100%;
+	border-radius: 20px;
 }
