--- a/style.css
+++ b/style.css
@@ -12,18 +12,19 @@ body {
 
 .qr-container {
 	height: max-content;
-	width: 250px;
-	border: 1px solid red;
+	width: 275px;
 	background-color: white;
-	padding: 26px;
-	border-radius: 20px;
+	padding: 16px;
+	border-radius: 16px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
 
-.qr-content {
+.qr-container > * {
+	margin-bottom: 20px;
+	text-align: center;
 }
 
 .image-container {
@@ -32,5 +33,13 @@ body {
 
 .image-container > img {
 	width: 100%;
-	border-radius: 20px;
+	border-radius: 8px;
+}
+
+.qr-heading {
+	font-size: 24px;
+}
+
+.qr-subheading {
+
 }
